--- a/Pages/Sitemap.cshtml
+++ b/Pages/Sitemap.cshtml
@@ -5,7 +5,7 @@
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
     <!-- Homepage -->
     <url>
-        <loc>https://www.simplecybertech.com/</loc>
+        <loc>https://simplecybertech.com/</loc>
         <lastmod>@DateTime.Now.ToString("yyyy-MM-dd")</lastmod>
         <changefreq>weekly</changefreq>
         <priority>1.0</priority>
@@ -13,49 +13,49 @@
 
     <!-- Main Pages -->
     <url>
-        <loc>https://www.simplecybertech.com/about-us</loc>
+        <loc>https://simplecybertech.com/about-us</loc>
         <lastmod>@DateTime.Now.ToString("yyyy-MM-dd")</lastmod>
         <changefreq>monthly</changefreq>
         <priority>0.8</priority>
     </url>
 
     <url>
-        <loc>https://www.simplecybertech.com/services-overview</loc>
+        <loc>https://simplecybertech.com/services-overview</loc>
         <lastmod>@DateTime.Now.ToString("yyyy-MM-dd")</lastmod>
         <changefreq>monthly</changefreq>
         <priority>0.9</priority>
     </url>
 
     <url>
-        <loc>https://www.simplecybertech.com/contact-us</loc>
+        <loc>https://simplecybertech.com/contact-us</loc>
         <lastmod>@DateTime.Now.ToString("yyyy-MM-dd")</lastmod>
         <changefreq>monthly</changefreq>
         <priority>0.8</priority>
     </url>
 
     <url>
-        <loc>https://www.simplecybertech.com/faq</loc>
+        <loc>https://simplecybertech.com/faq</loc>
         <lastmod>@DateTime.Now.ToString("yyyy-MM-dd")</lastmod>
         <changefreq>monthly</changefreq>
         <priority>0.7</priority>
     </url>
 
     <url>
-        <loc>https://www.simplecybertech.com/glossary</loc>
+        <loc>https://simplecybertech.com/glossary</loc>
         <lastmod>@DateTime.Now.ToString("yyyy-MM-dd")</lastmod>
         <changefreq>monthly</changefreq>
         <priority>0.7</priority>
     </url>
 
     <url>
-        <loc>https://www.simplecybertech.com/privacy-policy</loc>
+        <loc>https://simplecybertech.com/privacy-policy</loc>
         <lastmod>@DateTime.Now.ToString("yyyy-MM-dd")</lastmod>
         <changefreq>yearly</changefreq>
         <priority>0.5</priority>
     </url>
 
     <url>
-        <loc>https://www.simplecybertech.com/terms-of-service</loc>
+        <loc>https://simplecybertech.com/terms-of-service</loc>
         <lastmod>@DateTime.Now.ToString("yyyy-MM-dd")</lastmod>
         <changefreq>yearly</changefreq>
         <priority>0.5</priority>
@@ -65,7 +65,7 @@
     @foreach (var city in Model.Cities)
     {
         <url>
-            <loc>https://www.simplecybertech.com/services/@city.Slug</loc>
+            <loc>https://simplecybertech.com/services/@city.Slug</loc>
             <lastmod>@DateTime.Now.ToString("yyyy-MM-dd")</lastmod>
             <changefreq>monthly</changefreq>
             <priority>0.7</priority>
