--- a/Pages/Privacy-Policy.cshtml
+++ b/Pages/Privacy-Policy.cshtml
@@ -6,14 +6,6 @@
     ViewData["Title"] = "Privacy Policy";
     ViewData["MetaDescription"] = "Simple Cyber Technology's privacy policy outlines how we collect, use, and protect your personal information and data.";
 }
-@section PageSchema {
-    <script type="application/ld+json">
-        @Html.Raw(SchemaService.GetBreadcrumbSchema("Privacy Policy", "/privacy-policy"))
-    </script>
-    <script type="application/ld+json">
-        @Html.Raw(SchemaService.GetWebPageSchema("Privacy Policy - Simple Cyber Technology", "Learn how Simple Cyber Technology collects, uses, and protects your personal information and data. Our commitment to your privacy and security."))
-    </script>
-}
 
 <div class="container">
 
@@ -22,7 +14,7 @@
         <p class="effective-date">Effective Date: 1/1/2026</p>
     </section>
 
-    <section>  
+    <section id="MainContent">  
         <h3>1. Introduction</h3>
         <p>Simple Cyber Technology ("we," "our," or "us") is committed to protecting the privacy and security of the data we collect. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website or engage our cybersecurity services.</p>
     </section>
@@ -104,3 +96,16 @@
         <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the "Effective Date" at the top. You are advised to review this Privacy Policy periodically for any changes.</p>
     </section>
 </div>
+
+
+
+
+<!-- Page Schema section -->
+@section PageSchema {
+    <script type="application/ld+json">
+        @Html.Raw(SchemaService.GetBreadcrumbSchema("Privacy Policy", "/privacy-policy"))
+    </script>
+    <script type="application/ld+json">
+        @Html.Raw(SchemaService.GetWebPageSchema("Privacy Policy - Simple Cyber Technology", "Learn how Simple Cyber Technology collects, uses, and protects your personal information and data. Our commitment to your privacy and security."))
+    </script>
+}
